# MedGemmaNexus

./: .gitignore  README-6.md  README.md  __init__.py  pyproject.toml  requirements.txt
agent/: __init__.py  loop.py
benchmark/: __init__.py  score_run.py
commands/: __init__.py  dispatcher.py  registry.py  schemas.py
config/: __init__.py  skills.json
core/: __init__.py  domain_config.py  parser.py  paths.py  plan_dag.py
docs/: GRAPH_GUI.md  MEDGEMMA_COMPUTE_NODE.md  MRI_Agent_framework.md  MRI_Agent_tool.md  cardiac_acdc_classification_rules.md
example_report/: sub0191.md  sub0261.md
llm/: __init__.py  adapter_anthropic_api.py  adapter_gemini_api.py  adapter_medgemma_hf.py  adapter_openai_api.py  adapter_vllm_server.py
mri_agent_shell/: __init__.py  bootstrap.py  cli.py  dummy_tools.py  tool_registry.py
mri_agent_shell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
runtime/: __init__.py  artifact_index.py  finalize.py  graphjson.py  graphjson_v2.py  memory.py  path_utils.py  rag_local.py  sandbox_exec.py  tool_manifest.py
scripts/: cardiac_t1_pyramid_diagnosis.py  export_t1_molli_from_reverse_npz.py  medgemma_openai_server.py  open_medgemma_tunnel.sh  prepare_acdc_demo_group.py  run_acdc_cardiac_batch_regression.py  run_cardiac_cine_classification.py  run_cardiac_cine_seg.py  run_lujing_cine_nnunet_seg.py  run_lujing_cine_nnunet_seg.sh  run_shell_dry_run_demo.py  setup_lesion_candidates.sh  setup_models.sh  start_medgemma_server_apptainer.sh  start_vllm_server_apptainer.sh  submit_medgemma_server_slurm.sh  (+1 more)
(+220 files in other folders)
